# YT_downloader_Database

./: .gitignore  buildozer.spec  datatables.kv  datatables.py  main.py  pyproject.toml  queries.sql  readme.md  requirements.txt  youtubegui.kv  ytdownloader.py
.trunk/: trunk.yaml
UnitTests/: README.md
